--- a/pickups.html
+++ b/pickups.html
@@ -343,4 +343,9 @@ Grant - Keaton Mitchell/Stefon Diggs (10/30)
 Roger - Dallas Goedert (cut Antonio Gibson)<br>
 Randy - pickup (Derek Carr/- 9/17)
 </td></tr>
+<tr><td width=50>11/7</td>
+<td width=600>
+Roger - Garrett Wilson, Austin Seibert<br>
+Mike - Chase Brown, Zach Charbonnet
+</td></tr>
 </table>
