--- a/roster.html
+++ b/roster.html
@@ -40,20 +40,20 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>James Cook             </td></tr>
 <tr><td>TEN</td><td>Tony Pollard           </td></tr>
-<tr><td>CIN</td><td>Chase Brown            </td></tr>
-<tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
 <tr><td> KC</td><td>Kareem Hunt            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
+<tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Jason Sanders          </td></tr>
 <tr><td> TB</td><td>Chase McLaughlin       </td></tr>
+<tr><td>WAS</td><td>Austin Seibert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Malik Nabers           </td></tr>
 <tr><td>BUF</td><td>Ray Davis              </td></tr>
@@ -69,10 +69,11 @@
 <tr><td>LAR</td><td>Kyren Williams         </td></tr>
 <tr><td>DEN</td><td>Javonte Williams       </td></tr>
 <tr><td>CIN</td><td>Zack Moss              </td></tr>
-<tr><td>HOU</td><td>Cam Akers              </td></tr>
-<tr><td>CHI</td><td>Khalil Herbert         </td></tr>
+<tr><td>MIN</td><td>Cam Akers              </td></tr>
+<tr><td>CIN</td><td>Khalil Herbert         </td></tr>
+<tr><td>CIN</td><td>Chase Brown            </td></tr>
+<tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
 <tr><td> KC</td><td>Rashee Rice            </td></tr>
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
 <tr><td> GB</td><td>Jayden Reed            </td></tr>
@@ -82,7 +83,6 @@
 <tr><td>JAX</td><td>Evan Engram            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Brandon Aubrey         </td></tr>
-<tr><td>WAS</td><td>Austin Seibert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>Caleb Williams         </td></tr>
 <tr><td>BUF</td><td>Keon Coleman           </td></tr>
