--- a/pickups.html
+++ b/pickups.html
@@ -82,8 +82,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Josh Downs/Khalil Herbert</td>
+<td width=50>11/9</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -336,7 +336,8 @@ Randy - Cameron Dicker/Matthew Wright (10/22)<br>
 Steven - Ricky Pearsall/Luke Musgrave (10/22)<br>
 Sam - Jauan Jennings/Rashid Shaheed (10/22)<br>
 Grant - Darnell Mooney/Brayden Narveson (10/24)<br>
-Grant - Keaton Mitchell/Stefon Diggs (10/30)
+Grant - Keaton Mitchell/Stefon Diggs (10/30)<br>
+Mike - Mack Hollins/Rashee Rice (11/9)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
