--- a/roster.html
+++ b/roster.html
@@ -70,14 +70,14 @@
 <tr><td>DEN</td><td>Javonte Williams       </td></tr>
 <tr><td>CIN</td><td>Zack Moss              </td></tr>
 <tr><td>MIN</td><td>Cam Akers              </td></tr>
-<tr><td>CIN</td><td>Khalil Herbert         </td></tr>
 <tr><td>CIN</td><td>Chase Brown            </td></tr>
 <tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> KC</td><td>Rashee Rice            </td></tr>
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
 <tr><td> GB</td><td>Jayden Reed            </td></tr>
 <tr><td>SEA</td><td>Jaxon Smith-Njigba     </td></tr>
+<tr><td>IND</td><td>Josh Downs             </td></tr>
+<tr><td>BUF</td><td>Mack Hollins           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Trey McBride           </td></tr>
 <tr><td>JAX</td><td>Evan Engram            </td></tr>
