--- a/week10.html
+++ b/week10.html
@@ -8,13 +8,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (1)</b></font></td></tr>
 <tr><td>Flacco</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>-</td>             <td></td><td align=right>0</td></tr>
 <tr><td>London</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
+<tr><td>-</td>             <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Karty</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -57,7 +57,7 @@
 <tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Brooks</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Benson</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -69,8 +69,8 @@
 <tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Reed</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Downs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
 <tr><td>CWilliams</td>     <td></td><td align=right>0</td></tr>
@@ -129,7 +129,7 @@
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MHarrison</td>     <td></td><td align=right>0</td></tr>
@@ -142,9 +142,9 @@
 <tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Shakir</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kmet</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Legette</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
