--- a/pickups.html
+++ b/pickups.html
@@ -210,8 +210,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jake Bates/Jerome Ford</td>
+<td width=50>11/12</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -337,7 +337,8 @@ Steven - Ricky Pearsall/Luke Musgrave (10/22)<br>
 Sam - Jauan Jennings/Rashid Shaheed (10/22)<br>
 Grant - Darnell Mooney/Brayden Narveson (10/24)<br>
 Grant - Keaton Mitchell/Stefon Diggs (10/30)<br>
-Mike - Mack Hollins/Rashee Rice (11/9)
+Mike - Mack Hollins/Rashee Rice (11/9)<br>
+Matthew - Audric Estime/Brandon Aiyuk (11/12)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
@@ -348,5 +349,10 @@ Randy - pickup (Derek Carr/- 9/17)
 <td width=600>
 Roger - Garrett Wilson, Austin Seibert<br>
 Mike - Chase Brown, Zach Charbonnet
+</td></tr>
+<tr><td width=50>11/13</td>
+<td width=600>
+Mike - Blake Corum<br>
+Steven - Zach Charbonnet
 </td></tr>
 </table>
