--- a/roster.html
+++ b/roster.html
@@ -71,7 +71,6 @@
 <tr><td>CIN</td><td>Zack Moss              </td></tr>
 <tr><td>MIN</td><td>Cam Akers              </td></tr>
 <tr><td>CIN</td><td>Chase Brown            </td></tr>
-<tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
 <tr><td> GB</td><td>Jayden Reed            </td></tr>
@@ -86,6 +85,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>Caleb Williams         </td></tr>
 <tr><td>BUF</td><td>Keon Coleman           </td></tr>
+<tr><td>LAR</td><td>Blake Corum            </td></tr>
 </table>
 </td>
 </tr>
@@ -104,7 +104,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Tyreek Hill            </td></tr>
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
-<tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
 <tr><td>HOU</td><td>Tank Dell              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Dalton Schultz         </td></tr>
@@ -116,6 +115,7 @@
 <tr><td>DEN</td><td>Bo Nix                 </td></tr>
 <tr><td>JAX</td><td>Brian Thomas           </td></tr>
 <tr><td> KC</td><td>Carson Steele          </td></tr>
+<tr><td>DEN</td><td>Audric Estime          </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -185,7 +185,6 @@
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
 <tr><td> GB</td><td>Josh Jacobs            </td></tr>
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
-<tr><td>CLE</td><td>Jerome Ford            </td></tr>
 <tr><td>CLE</td><td>Nick Chubb             </td></tr>
 <tr><td> GB</td><td>Emanuel Wilson         </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -198,6 +197,7 @@
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
+<tr><td>DET</td><td>Jake Bates             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Drake Maye             </td></tr>
 <tr><td>MIN</td><td>Will Reichard          </td></tr>
@@ -213,6 +213,7 @@
 <tr><td>SEA</td><td>Kenneth Walker         </td></tr>
 <tr><td>ARI</td><td>James Conner           </td></tr>
 <tr><td>NYG</td><td>Devin Singletary       </td></tr>
+<tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
@@ -226,7 +227,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Trey Benson            </td></tr>
 <tr><td>CAR</td><td>Jonathon Brooks        </td></tr>
-<tr><td>LAR</td><td>Blake Corum            </td></tr>
 <tr><td>MIA</td><td>Jaylen Wright          </td></tr>
 <tr><td> TB</td><td>Jalen McMillan         </td></tr>
 <tr><td> SF</td><td>Ricky Pearsall         </td></tr>
