--- a/week11.html
+++ b/week11.html
@@ -53,11 +53,11 @@
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MHarrison</td>     <td></td><td align=right>0</td></tr>
+<tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -111,10 +111,10 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (9)</b></font></td></tr>
 <tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Tracy</td>         <td></td><td align=right>0</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>NCollins</td>      <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Flowers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Otton</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Likely</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Daniels</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
