--- a/roster.html
+++ b/roster.html
@@ -133,10 +133,10 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>PHI</td><td>DeVonta Smith          </td></tr>
-<tr><td>JAX</td><td>Christian Kirk         </td></tr>
 <tr><td>DET</td><td>Jameson Williams       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Sam LaPorta            </td></tr>
+<tr><td> NE</td><td>Hunter Henry           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Jake Moody             </td></tr>
 <tr><td>LAC</td><td>Cameron Dicker         </td></tr>
