--- a/pickups.html
+++ b/pickups.html
@@ -338,7 +338,8 @@ Sam - Jauan Jennings/Rashid Shaheed (10/22)<br>
 Grant - Darnell Mooney/Brayden Narveson (10/24)<br>
 Grant - Keaton Mitchell/Stefon Diggs (10/30)<br>
 Mike - Mack Hollins/Rashee Rice (11/9)<br>
-Matthew - Audric Estime/Brandon Aiyuk (11/12)
+Matthew - Audric Estime/Brandon Aiyuk (11/12)<br>
+Randy - Hunter Henry/Christian Kirk (11/17)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
