--- a/week11.html
+++ b/week11.html
@@ -7,12 +7,12 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (1)</b></font></td></tr>
-<tr><td>Flacco</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Richardson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>London</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>-</td>             <td></td><td align=right>0</td></tr>
+<tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Karty</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -55,7 +55,7 @@
 <tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -82,11 +82,11 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
 <tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
