--- a/week11.html
+++ b/week11.html
@@ -24,7 +24,7 @@
 <tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Downs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Reed</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
@@ -68,9 +68,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (4)</b></font></td></tr>
 <tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>BThomas</td>       <td></td><td align=right>0</td></tr>
+<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
@@ -97,12 +97,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
 <tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Allgeier</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Shakir</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kmet</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Legette</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Odunze</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
