--- a/thousand.html
+++ b/thousand.html
@@ -447,6 +447,12 @@
     <td>1135</td>
     <td>Brian</td>
     <td>575</td></tr>
+<tr><td>2024</td>
+    <td>Week 11</td>
+    <td>Sam Edwards</td>
+    <td>1135</td>
+    <td>Matthew</td>
+    <td>1105</td></tr>
 <tr><td>2001</td>
     <td>Week 10</td>
     <td>Grant Mydland</td>
@@ -561,6 +567,12 @@
     <td>1105</td>
     <td>Rich</td>
     <td>410</td></tr>
+<tr><td>2024</td>
+    <td>Week 11</td>
+    <td>Matthew Edwards</td>
+    <td>1105</td>
+    <td>Sam</td>
+    <td>1135</td></tr>
 <tr><td>2001</td>
     <td>Week 9</td>
     <td>Randy Edwards</td>
