--- a/week11.html
+++ b/week11.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (1)</b></font></td></tr>
-<tr><td>Richardson</td>    <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Richardson</td>    <td></td><td align=right>190</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>35</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>London</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Karty</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>35</td></tr>
+<tr><td>London</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Bowers</td>        <td></td><td align=right>160</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>105</td></tr>
+<tr><td>Karty</td>         <td></td><td align=right>20</td></tr>
+<tr><td></td>              <td></td><td align=right>575</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
-<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
-<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Reed</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Stroud</td>        <td></td><td align=right>35</td></tr>
+<tr><td>KWilliams</td>     <td></td><td align=right>40</td></tr>
+<tr><td>CBrown</td>        <td></td><td align=right>65</td></tr>
+<tr><td>Reed</td>          <td></td><td align=right>75</td></tr>
 <tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>CWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Aubrey</td>        <td></td><td align=right>65</td></tr>
+<tr><td>CWilliams</td>     <td></td><td align=right>65</td></tr>
+<tr><td></td>              <td></td><td align=right>345</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (2)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>265</td></tr>
+<tr><td>JCook</td>         <td></td><td align=right>150</td></tr>
+<tr><td>Hunt</td>          <td></td><td align=right>30</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Higgins</td>       <td></td><td align=right>195</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>95</td></tr>
 <tr><td>RDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>765</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (5)</b></font></td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>235</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Achane</td>        <td></td><td align=right>85</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Dicker</td>        <td></td><td align=right>100</td></tr>
+<tr><td>McConkey</td>      <td></td><td align=right>60</td></tr>
+<tr><td></td>              <td></td><td align=right>510</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (4)</b></font></td></tr>
-<tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Purdy</td>         <td></td><td align=right>125</td></tr>
+<tr><td>Gibbs</td>         <td></td><td align=right>105</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>185</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>225</td></tr>
+<tr><td>THill</td>         <td></td><td align=right>105</td></tr>
 <tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>60</td></tr>
+<tr><td>Nix</td>           <td></td><td align=right>300</td></tr>
+<tr><td></td>              <td></td><td align=right>1105</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>325</td></tr>
+<tr><td>Hall</td>          <td></td><td align=right>235</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>160</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>160</td></tr>
+<tr><td>Pickens</td>       <td></td><td align=right>40</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Bates</td>         <td></td><td align=right>95</td></tr>
+<tr><td>Maye</td>          <td></td><td align=right>120</td></tr>
+<tr><td></td>              <td></td><td align=right>1135</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>100</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>350</td></tr>
 <tr><td>Allgeier</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Shakir</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Shakir</td>        <td></td><td align=right>35</td></tr>
+<tr><td>Nacua</td>         <td></td><td align=right>135</td></tr>
 <tr><td>Kmet</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Odunze</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>65</td></tr>
+<tr><td>Odunze</td>        <td></td><td align=right>30</td></tr>
+<tr><td></td>              <td></td><td align=right>715</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (9)</b></font></td></tr>
 <tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>NCollins</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>80</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>80</td></tr>
+<tr><td>NCollins</td>      <td></td><td align=right>25</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Likely</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Daniels</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Likely</td>        <td></td><td align=right>35</td></tr>
+<tr><td>Boswell</td>       <td></td><td align=right>260</td></tr>
+<tr><td>Daniels</td>       <td></td><td align=right>30</td></tr>
+<tr><td></td>              <td></td><td align=right>510</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (8)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>80</td></tr>
 <tr><td>JWright</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>75</td></tr>
+<tr><td>St Brown</td>      <td></td><td align=right>255</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>40</td></tr>
 <tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>45</td></tr>
 <tr><td>Pearsall</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>495</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (10)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>75</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>395</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>25</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Mooney</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Worthy</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Fairbairn</td>     <td></td><td align=right>70</td></tr>
+<tr><td>Worthy</td>        <td></td><td align=right>105</td></tr>
+<tr><td></td>              <td></td><td align=right>670</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -166,45 +166,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
+<tr><td><font size=2>Sam(7)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7690</font></td>
+    <td><font size=2>7875</font></td>
+    <td><font size=2>1135</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6900</font></td>
-    <td><font size=2>6310</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7410</font></td>
+    <td><font size=2>7025</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Randy(5)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6375</font></td>
-    <td><font size=2>6320</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6885</font></td>
+    <td><font size=2>7085</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>4</font></td>
+<tr><td><font size=2>States(1)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6555</font></td>
-    <td><font size=2>6770</font></td>
-    <td><font size=2>895</font></td>
-    <td><font size=2>410</font></td>
+    <td><font size=2>5570</font></td>
+    <td><font size=2>5940</font></td>
+    <td><font size=2>700</font></td>
+    <td><font size=2>255</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>5470</font></td>
-    <td><font size=2>5495</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>5815</font></td>
+    <td><font size=2>6070</font></td>
     <td><font size=2>750</font></td>
     <td><font size=2>310</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>4995</font></td>
-    <td><font size=2>5595</font></td>
-    <td><font size=2>700</font></td>
-    <td><font size=2>255</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -215,43 +215,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Roger(2)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>6790</font></td>
-    <td><font size=2>5410</font></td>
+    <td><font size=2>7555</font></td>
+    <td><font size=2>5920</font></td>
     <td><font size=2>895</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(10)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>7215</font></td>
-    <td><font size=2>6315</font></td>
+    <td><font size=2>7885</font></td>
+    <td><font size=2>6810</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Steven(8)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6155</font></td>
-    <td><font size=2>5820</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6650</font></td>
+    <td><font size=2>6490</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>440</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>5300</font></td>
-    <td><font size=2>5880</font></td>
+    <td><font size=2>6015</font></td>
+    <td><font size=2>6390</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>320</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>4990</font></td>
-    <td><font size=2>6830</font></td>
-    <td><font size=2>1000</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>6095</font></td>
+    <td><font size=2>7965</font></td>
+    <td><font size=2>1105</font></td>
     <td><font size=2>245</font></td>
     <td><font size=2>1</font></td>
 </table>
