--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <a href="week8.html"><b>8</b></a>
 <a href="week9.html"><b>9</b></a>
 <a href="week10.html"><b>10</b></a>
-<a href="week11.html"><b>11P</b></a><br>
+<a href="week11.html"><b>11</b></a>
+<a href="week12.html"><b>12P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -68,45 +69,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
+<tr><td><font size=2>Sam(7)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7690</font></td>
+    <td><font size=2>7875</font></td>
+    <td><font size=2>1135</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6900</font></td>
-    <td><font size=2>6310</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7410</font></td>
+    <td><font size=2>7025</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Randy(5)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6375</font></td>
-    <td><font size=2>6320</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6885</font></td>
+    <td><font size=2>7085</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>4</font></td>
+<tr><td><font size=2>States(1)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6555</font></td>
-    <td><font size=2>6770</font></td>
-    <td><font size=2>895</font></td>
-    <td><font size=2>410</font></td>
+    <td><font size=2>5570</font></td>
+    <td><font size=2>5940</font></td>
+    <td><font size=2>700</font></td>
+    <td><font size=2>255</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>5470</font></td>
-    <td><font size=2>5495</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>5815</font></td>
+    <td><font size=2>6070</font></td>
     <td><font size=2>750</font></td>
     <td><font size=2>310</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>4995</font></td>
-    <td><font size=2>5595</font></td>
-    <td><font size=2>700</font></td>
-    <td><font size=2>255</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -117,43 +118,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Roger(2)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>6790</font></td>
-    <td><font size=2>5410</font></td>
+    <td><font size=2>7555</font></td>
+    <td><font size=2>5920</font></td>
     <td><font size=2>895</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(10)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>7215</font></td>
-    <td><font size=2>6315</font></td>
+    <td><font size=2>7885</font></td>
+    <td><font size=2>6810</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Steven(8)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6155</font></td>
-    <td><font size=2>5820</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6650</font></td>
+    <td><font size=2>6490</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>440</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>5300</font></td>
-    <td><font size=2>5880</font></td>
+    <td><font size=2>6015</font></td>
+    <td><font size=2>6390</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>320</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>4990</font></td>
-    <td><font size=2>6830</font></td>
-    <td><font size=2>1000</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>6095</font></td>
+    <td><font size=2>7965</font></td>
+    <td><font size=2>1105</font></td>
     <td><font size=2>245</font></td>
     <td><font size=2>1</font></td>
 </table>
